Add authenticate example

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -23,5 +23,6 @@
     },
     "currencyInputTitle": "Input Currency",
     "currentDateText": "Current Date:",
-    "currentMoneyText": "Current Money:"
+    "currentMoneyText": "Current Money:", 
+    "articleText": "Article" 
 }
