add Objectbox database demo

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -26,5 +26,6 @@
     "currencyInputTitle": "Input Currency",
     "currentDateText": "Current Date:",
     "currentMoneyText": "Current Money:", 
-    "articleText": "Article" 
+    "articleText": "Article", 
+    "friendListText": "Friend list(ObjBox demo)"
 }
